SONARJAVA-5501 Implement check for HTML and javadoc tags in markdown comments